Fixed several sonar issues on FileServlet class
Signed-off-by: pierantoniomerlino <pierantonio.merlino@eurotech.com>